--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/que20/homebridge-freebox-player/issues"
   },
+  "dependencies": {
+    "request": "2.88.0"
+  },
   "homepage": "https://github.com/que20/homebridge-freebox-player#readme"
 }
