Initial fork and mod test

--- a/package.json
+++ b/package.json
@@ -1,30 +1,32 @@
 {
-  "name": "homebridge-freebox-player",
-  "version": "1.0.1",
-  "description": "Homebridge plugin to control your Freebox Player",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "engines": {
-    "homebridge": ">=1.0.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/que20/homebridge-freebox-player.git"
-  },
-  "keywords": [
-    "homebridge-plugin",
-    "homebridge",
-    "freebox"
-  ],
-  "author": "Kevin MAAREK",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/que20/homebridge-freebox-player/issues"
-  },
-  "dependencies": {
-    "request": "2.88.0"
-  },
-  "homepage": "https://github.com/que20/homebridge-freebox-player#readme"
+	"name": "homebridge-freebox-player-delta",
+	"version": "0.0.1",
+	"description": "Homebridge plugin to control your Freebox Player Delta",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"engines": {
+		"homebridge": ">=1.1.6"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git@github.com:securechicken/homebridge-freebox-player-delta.git"
+	},
+	"keywords": [
+		"homebridge-plugin",
+		"homebridge",
+		"freebox",
+		"freebox-player",
+		"freebox-devialet"
+	],
+	"author": "@securechicken",
+	"license": "GPL-3.0",
+	"bugs": {
+		"url": "https://github.com/securechicken/homebridge-freebox-player-delta/issues"
+	},
+	"dependencies": {
+		"request": "2.88.0"
+	},
+	"homepage": "https://github.com/securechicken/homebridge-freebox-player-delta"
 }
