Homebridge verified status

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
 	"author": "@securechicken",
 	"license": "GPL-3.0",
 	"funding": {
-		"type": "individual",
+		"type": "paypal",
 		"url": "https://www.paypal.com/donate?business=EJLS4QWSCUVKA&item_name=Support+SecureChicken+developments"
 	},
 	"bugs": {
